Last bit of cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,4 @@ char_sheet/classes.json
 char_sheet/feats.json
 char_sheet/classes.json
 char_sheet/classes.json
+char_sheet/pull_from_srd/feats.json
